# memai

./: .gitattributes  .gitignore  BRIEF.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
bundles/italian-a0-starter/: bundle.toml
bundles/italian-a0-starter/lessons/: 01_saluti.toml  02_io_tu_essere.toml  03_verbi_frequenti.toml  04_al_caffe.toml
client/: README.md  pyproject.toml
client/config/: memai.example.toml
client/src/memai_client/: __init__.py  client.py
docs/: AUTHORING_BUNDLES.md  BRIEF_phase11_bundle_format.md  BRIEF_phase12_tutor.md  INFRASTRUCTURE.md  INSTALLATION.md  INSTALL_CLIENT.md  INSTALL_SERVER.md  PERSONAS.md  PLAN.md
docs/archive/: PLAN_phases_1-13.md  README.md
docs/spec/: FUNCTIONAL.md  GLOSSARY.md  SPEC.md  TECHNICAL.md
scripts/: reset-dev-state.ps1  reset-dev-state.sh  reset_dev_state.py  run-local.ps1  run-local.sh
server/: .env.example  README.md  pyproject.toml
server/config/: memai.example.toml  memai.toml
server/migrations/: 001_initial_schema.sql
server/src/memai_server/: bundle_cli.py  server.py
server/src/memai_server/domain/: events.py  model.py  protocols.py
server/src/memai_server/infrastructure/: bundle_toml.py  config.py  embedding.py  json_file.py  language_detection.py  llm.py  postgres.py  recall_gate.py  stt.py  tts.py
server/src/memai_server/infrastructure/language_tutor/: __init__.py  assessment.py  cluster_ollama.py  enrichment.py  focus_ollama.py  judge_ollama.py  recall_gate.py  selection.py  state.py
server/src/memai_server/infrastructure/llm/: __init__.py  _common.py  ollama.py  openai_compatible.py  openrouter.py
server/src/memai_server/services/: bundle_install.py  directives.py  memory.py  persona.py  ports.py  replay.py  session.py  upsert.py  user.py
server/src/memai_server/use_cases/: memory.py  persona.py  ports.py  session.py  user.py
server/tests/e2e/: test_tutor_llm_quality_gate.py
server/tests/fakes/: fakes.py
server/tests/integration/: conftest.py  test_bundle_install.py  test_consolidation_pipeline.py  test_embedding.py  test_json_file.py  test_memory_brief_injection.py  test_postgres.py  test_stt.py  test_tts.py  test_tutor_llm_quality_gate.py
server/tests/integration/fixtures/spanish_mini/: bundle.toml
server/tests/integration/fixtures/spanish_mini/lessons/: 01_greetings.toml  02_cafe.toml
server/tests/unit/domain/: test_conversation.py  test_cosine_similarity.py  test_persona.py
server/tests/unit/infrastructure/: test_bundle_toml.py  test_config.py  test_extraction_prompt.py  test_recall_gate.py  test_tutor_assessment.py  test_tutor_enrichment.py  test_tutor_selection.py
server/tests/unit/services/: test_bundle_install.py  test_consolidation.py  test_directives.py  test_enrichment.py  test_markdown_stripping.py  test_persona.py  test_replay.py  test_session.py  test_upsert.py  test_user.py
server/tests/unit/use_cases/: test_consolidation.py  test_session.py  test_user.py
setup/: README.md  pyproject.toml
setup/src/memai_setup/: cli.py
setup/src/memai_setup/catalogues/: llm_catalogue.toml  stt_catalogue.toml  tts_catalogue.toml
setup/src/memai_setup/domain/: language_coverage.py  languages.py  model.py  plan.py  services.py
setup/src/memai_setup/infrastructure/: config_writer.py  existing_install.py  gpu.py  health_checks.py  model_installer.py  prompter.py  schema_runner.py  toml_catalogue.py
setup/src/memai_setup/services/: errors.py  ports.py  run_wizard.py  steps.py
setup/tests/fakes/: fakes.py
setup/tests/integration/: test_toml_catalogue.py
setup/tests/unit/domain/: test_fit_assessment.py  test_installation_plan.py  test_language_coverage.py  test_languages.py
setup/tests/unit/infrastructure/: test_existing_install.py  test_gpu.py  test_toml_config_writer.py
setup/tests/unit/services/: test_check_prerequisites_step.py  test_configure_database_connection_step.py  test_configure_llm_provider_step.py  test_detect_compute_device_step.py  test_download_embedding_model_step.py  test_generate_config_step.py  test_resolve_stt_engine_step.py  test_resolve_tts_engines_step.py  test_run_health_checks_step.py  test_run_wizard.py  test_select_languages_step.py  test_select_llm_step.py  test_setup_schema_step.py  test_show_welcome_step.py
src/memai/: domain.py
va_client/: .env.example
va_client/src/memai_client/: client.py
va_server/: .env.example  pyproject.toml
va_server/src/memai_server/: server.py
