[project]
name = "memai"
version = "0.1.0"
description = "Memory manager built for/by AI"
readme = "README.md"
authors = [
    { name = "mart2010", email = "mart2010.l@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

# [project.scripts]
# memai = "memai:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
