[project]
name = "memai-client"
version = "0.1.0"
description = "Mémai voice assistant — client (Windows)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "python-dotenv>=1.0",
    "questionary>=2.0",
    "sounddevice>=0.5.5",
    "webrtcvad-wheels>=2.0.14",
    "websockets>=16.0",
]

[project.scripts]
memai-client = "memai_client.client:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
