[project]
name = "memai-server"
version = "0.1.0"
description = "Mémai voice assistant — server (GPU-equipped machine)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "ollama>=0.6.1",
    "tomli-w>=1.2",
    "soundfile>=0.13.1",
    "kokoro>=0.9.0",
    "scipy>=1.13",
    "webrtcvad-wheels>=2.0.14",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "websockets>=16.0",
    "openai>=1.30",
    "num2words>=0.5.13",
]

[project.optional-dependencies]
# TTS requires python<3.12 and has a licence conflict (MPL-2.0+Exhibit B vs AGPL-3.0).
# Install only on the GPU server; planned replacement with Piper or Kokoro.
# After install: replace CPU torch with CUDA build via uv add torch --index https://download.pytorch.org/whl/cu121
tts = ["TTS>=0.22.0"]

[project.scripts]
memai-server = "memai_server.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
