[project]
name = "memai-setup"
version = "0.1.0"
description = "Mémai voice assistant — installation wizard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "questionary>=2.0",
    "platformdirs>=4.0",
    "tomli-w>=1.2",
    "psycopg[binary]>=3.1",
    "huggingface-hub>=0.24",
]

[project.scripts]
memai-setup = "memai_setup.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
